--- a/domain.yml
+++ b/domain.yml
@@ -4,12 +4,12 @@ intents:
   - chitchat:
       use_entities: []
   - inform
-  - affirm
-  - deny
-  - stop
+  # - affirm
+  # - deny
+  # - stop
   - thankyou
   - greet
-  - bot_challenge
+  # - bot_challenge
 
 entities:
   - table
@@ -38,10 +38,10 @@ responses:
              - num_entries: {num_entries}"
   utter_noworries:
     - text: "you are welcome :)"
-  utter_chitchat:
-    - text: "chitchat"
-  utter_ask_continue:
-    - text: "do you want to continue?"
+  # utter_chitchat:
+  #   - text: "chitchat"
+  # utter_ask_continue:
+  #   - text: "do you want to continue?"
   utter_wrong_table:
     - text: "table is not in the database, please try again"
   utter_wrong_num_entries:
@@ -50,10 +50,10 @@ responses:
     - text: "sorry, I didn't understand you, please try input something else"
   utter_greet:
     - text: "Hello! I am API search assistant! How can I help?"
-  utter_iamabot:
-    - text: "I am a bot, powered by Rasa."
-  utter_restart:
-    - text: "restarted"
+  # utter_iamabot:
+  #   - text: "I am a bot, powered by Rasa."
+  # utter_restart:
+  #   - text: "restarted"
 
 forms:
   - api_form
